feat: add Redis caching for categories with @Cacheable and @CacheEvict, configure JSON serialization