@@ -4,9 +4,12 @@ import com.harshit.smartspend.dto.CategoryRequestDto;
 import com.harshit.smartspend.dto.CategoryResponseDto;
 import com.harshit.smartspend.entity.Category;
 import com.harshit.smartspend.repository.CategoryRepository;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class CategoryServiceImpl implements CategoryService {
@@ -18,6 +21,7 @@ public class CategoryServiceImpl implements CategoryService {
     }
 
     @Override
+    @CacheEvict(value = "categories", allEntries = true)
     public CategoryResponseDto createCategory(CategoryRequestDto requestDto) {
         if (categoryRepository.existsByName(requestDto.getName())) {
             throw new RuntimeException("Category already exists: " + requestDto.getName());
@@ -36,10 +40,12 @@ public class CategoryServiceImpl implements CategoryService {
     }
 
     @Override
+    @Cacheable(value = "categories")
     public List<CategoryResponseDto> getAllCategories() {
+        System.out.println("DB hit");
         return categoryRepository.findAll().stream()
                 .map(category -> CategoryResponseDto.builder()
                         .id(category.getId())
-                        .name(category.getName()).build()).toList();
+                        .name(category.getName()).build()).collect(Collectors.toList());
     }
 }
